--- a/event/voirtout.html
+++ b/event/voirtout.html
@@ -1,2 +1,2 @@
-<h1>toutes les breaking news</h1>
-<%=render_collection(collection=params['mynews'], partial='news/_news.html', as_='news')%>
+<h1>tous les evenements</h1>
+<%=render_collection(collection=params['event'], partial='event/_event.html', as_='event')%>
