--- a/mypage/index.html
+++ b/mypage/index.html
@@ -9,12 +9,8 @@
 
 <a href="/">s'inscrire / se connecter</a>
 <a href="/welcome">voir tous les users</a>
-<a href="/new">ajouter des news</a>
-<a href="/allmynews">voir toutes les news</a>
-<a href="/new_datastorage">ajouter un stockage des donnees</a>
-<a href="/alldatastorage">voir tous les stockage des donnees</a>
-<a href="/newremede">ajouter un remede</a>
-<a href="/allremedes">voir tous les remedes</a>
+<a href="/newevent">ajouter un evenement musique</a>
+<a href="/allevents">voir tous les evenements de musique</a>
 <div>
 	<%="<form action=\"/logmeout\" method=\"post\"><input value=\"se deconnecter\" type=\"submit\"/></form>" if session['name'] != "" else ""%>
 
